chore: ios button stretching fix?

--- a/src/app/palette-table/palette-table.component.scss
+++ b/src/app/palette-table/palette-table.component.scss
@@ -1,14 +1,20 @@
 .comp-container {
   table {
     border-collapse: collapse;
+
     th {
       font-family: var(--monoFont);
     }
+
     td {
       // border: 2px solid white;
       margin: 0;
       padding: 7.5px;
+      // width: 22px;
+      // height: 22px;
       line-height: 0;
+      align-items: center;
+      justify-items: center;
       // display: inline-flexbox;
       // height: fit-content;
     }
@@ -24,13 +30,16 @@
       box-sizing: border-box;
       border-radius: 5px;
       background-color: #e1e1e1;
-      min-width: var(--minHitDimensionAA);
-      min-height: var(--minHitDimensionAA);
+      min-width: 15px;
+      min-height: 15px;
+      // min-width: var(--minHitDimensionAA);
+      // min-height: var(--minHitDimensionAA);
       font-family: var(--monoFont);
       font-weight: 700;
       font-size: 19px;
-      width: 100%;
+      // width: 100%;
       // flex-grow: 1;
+      // overflow: hidden;
 
       span {
         line-height: 0;
